# short-film

./: .gitignore  AGENTS.md  BUILD_SUMMARY.md  CHANGELOG.md  README.md  SKILL.md  install.sh  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
short_film/: __init__.py  cli.py  config.py  generator.py  image_gen.py  models.py  state.py  stitcher.py  video_gen.py
tests/: __init__.py  test_cli.py  test_config.py  test_image_gen.py  test_models.py  test_state.py  test_stitcher.py  test_video_gen.py
